app/assets/stylesheets/style.css.sass
@import 'partials/colors'

body
  margin: 0
  padding: 0
  font-family: proxima-nova, Helvetica, Arial, sans-serif
  font-size: 100%
  background-color: #ebe6e2
  background: image-url("background.jpg") no-repeat fixed center top rgba(0, 0, 0, 0)
  background-size: 100% auto

ul
  list-style: none
  color: $navigation-links-purple

hr
  border-style: dashed
  border-color: rgba(177, 166, 204, 0.5)

p
  font-size: 18px

.navigation
  float: right
  margin: 15px 10px 0 0
  min-width: 200px

.navbar
  float: left
  font-size: 19px
  font-weight: 400
  letter-spacing: 0.02em
  margin: 0
  height: 42px

#mobile-nav-icon
  display: none

.navbar li
  border-left: 1px solid $navigation-gray-separators
  float: left
  padding: 10px 20px

.navbar li:first-child
  border: none

.member-button
  background-color: $become-member-grey
  border-radius: 6px
  padding: 10px 25px
  margin-left: 15px
  color: $become-member-white
  box-shadow: 0 1px 1px rgba(114, 98, 154, 0.1)
  float: right

a
  margin: 0
  padding: 0
  vertical-align: baseline
  text-decoration: none
  color: $link-purple

#left-image
  display: block
  float: left
  width: 15%

#right-image
  display: inline
  float: right
  width: 15%

#main-layout
  width: 100%


.right-panel, .left-panel
  display: inline-block

.left-panel
  width: 60%
  padding-right: 30px

.right-panel
  max-width: 400px
  vertical-align: top
  width: 30%
  margin-left: 30px

.siteunder
  font-size: 18px
  margin-top: 140px
  color: #555555
  margin-left: 20px

.logo
  width: 185px
  float: left

#top
  width: 100%
  height: 6px
  background-color: #2c173a
  border-bottom: 2px solid #b9b1bf
  min-width: 100%

#nav-inside
  min-width: 900px
  margin: 0 auto
  max-width: 1100px

#navlight
  height: 80px
  background-color: $navigation-gray
  border-bottom: 1px solid $nav-block-border
  width: 100%
  min-width: 908px
  padding-top: 10px

.row
  margin-bottom: 20px
  width: 100%

.quarter, .half, .third, .two-thirds, .row
  display: inline-block
  padding-right: 20px
  vertical-align: top

.quarter
  width: 25%

.half
  margin: 20px 20px 0 0
  width: 45%

.third
  width: 33%

.two-thirds
  padding-right: 0
  width: 66%

.venue
  .third
    padding-right: 0
    vertical-align: top
.talk
  width: 100%
  display: inline-block
  padding-bottom: 10px

  .information, .speaker
    display: inline-block
    vertical-align: top

  .information
    font-size: 0.9em

  .speaker
    width: 170px
    font-size: 0.8em

#container
  background-color: #FFFFFF
  font-size: 1.4em
  margin: 0 auto 70px
  max-width: 1100px
  min-width: 900px
  border-left: 8px solid rgba(242, 242, 244, 0.5)
  border-bottom: 8px solid rgba(242, 242, 244, 0.5)
  border-right: 8px solid rgba(242, 242, 244, 0.5)
  -webkit-background-clip: padding-box
  background-clip: padding-box
  box-shadow: 1px 0px 0px rgba(177, 166, 204, 0.2) inset, -1px 0px 0px rgba(177, 166, 204, 0.2) inset
  -webkit-box-shadow: 1px 0px 0px rgba(177, 166, 204, 0.2) inset, -1px 0px 0px rgba(177, 166, 204, 0.2) inset
  -moz-box-shadow:    1px 0px 0px rgba(177, 166, 204, 0.2) inset, -1px 0px 0px rgba(177, 166, 204, 0.2) inset
  padding-bottom: 20px
  min-height: 450px


  input, textarea
    margin-right: 10px

  input[type="text"], input[type="email"], textarea
    font-family: inherit
    width: 350px
    height: 35px
    margin-top: 10px
    padding: 5px 15px
    border-radius: 6px
    border: 1px solid $nav-block-border
    background-color: $next-session-grey
    font-size: 1em
    color: $become-member-grey

  .btn, .button, input[type='submit']
    background-color: $become-member-grey
    border-radius: 6px
    padding: 10px 25px
    margin-left: 15px
    box-shadow: 0 1px 1px rgba(114, 98, 154, 0.1)
    font-size: 20px
    &:hover
      box-shadow: 1px 2px 2px  #652f93

  .button, input[type='submit']
    text-decoration: none
    transition-duration: 0.2s
    color: $become-member-white


  textarea
    height: 107px
    width: 805px

  .required
    abbr
      color: #F50000
      border-bottom: none

  label
    display: block

  .date
    color: #652f93
    font-weight: bold

  .lead
    font-size: 18px
    font-weight: 300
    line-height: 21px
    color: $paragraph

  .messages
    margin-top: 0px

  .messages
    padding: 0 100px

  #flash_notice
    padding: 10px
    font-size: 0.9em
    background-color: #f6f4f8

  section
    padding-top: 20px

.right
  text-align: right


.tutor, .coach
  margin-top: 50px
  .avatar, .about
    display: inline-block
    vertical-align: top

  .avatar
    margin-right: 20px

    img
      border-radius: 30px

  .about
    max-width: 500px

#wall-of-fame
  .coach
    .about
      min-width: 300px
      max-width: 300px
      line-height: 0.8em

      .name
        font-size: 0.8em

    .about_you
      font-size: 0.6em

  li
    display: inline-block
    width: 45%

.center
  text-align: center

.session
  border-left: 10px solid $next-session-yellow

.mission
  border-left: 10px solid $our-mission-purple

.meeting
  border-left: 10px solid $meeting-title

#code-of-conduct
  border-left: 10px solid $code-of-conduct-purple
  background-color: $gray-title-button

.course,
  border-left: 10px solid $next-course-green
  background-color: $next-session-grey

  &.past
    border-left: 10px solid $lightgreen

.session
  &.upcoming
    background-color: $next-session-grey
  &.past
    border-left: 10px solid $lightyellow
    background-color: $next-session-grey

.titlebox
  padding: 10px 20px
  width: 83%
  margin: 30px 0 30px
  padding: 20px 40px
  box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
  -webkit-box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
  -moz-box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
  position: relative
  background-color: $gray-title-button

  h2
    color: $titles-dark-purple
    font-size: 34px
    text-shadow: 0px 0px 2px rgba(250, 250, 250, 1)
    margin: 0
    font-weight: 300

  .dot
    background: image-url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
    height: 30px
    position: absolute
    right: 8px
    top: 8px
    width: 30px


.description
  margin-left: 50px
  width: 84%
  padding-bottom: 30px

  .sub-block
    margin-top: 10px
    padding: 30px 0
    .member-button
      margin-left: 0

  .lead
    a
      border-bottom: 1px dotted $link-purple

  .move-top
    padding-top: 10px

  .details-block
    padding-top: 10px
    border-bottom: 1px solid $nav-block-border

    a
      border-bottom: 1px dotted $link-purple

    h3
      font-weight: 600
      font-size: 28px
      margin: 0
      color: $title-side

    h5
      font-size: 16px
      font-weight: 400
      letter-spacing: 0.03em
      color: $sub-session-desc-grey
      margin: 0

    h6
      font-size: 15px
      font-weight: 600
      color: $title-side
      margin: 21px 0 26px

    ul
      color: inherit

    .short
      width: 54%

#sessions ul li
  margin-bottom: 15px

.social
  margin: 10px auto
  border-bottom: 1px solid $navigation-gray-separators
  padding-bottom: 16px
  li
    display: inline-block
    margin: auto 10px


.right-block
  padding: 0 0 24px 30px
  width: 74%

  h4
    color: $title-side
    margin: 0
    font-weight: 600
    font-size: 22px

  &.sponsors
    ul
      padding: 5px 0 0 0
      margin-bottom: 0
      margin-top: 0

      li
        margin-top: 20px

    .view-all
      margin: 29px 0
      text-align: center

  .gallery
    padding: 5px 0 0 0
    margin-bottom: 0

    li
      margin-top: 0px

.right-block:not(:last-child)
  border-bottom: 1px solid $navigation-gray-separators

section#sponsors
  border-top: 1px solid $navigation-gray-separators
  padding: 5px 0 0 0
  margin-bottom: 0
  margin-top: 0

  li
    margin: 20px
    display: inline-block

#meeting
  .tutor
    font-size: 0.8em

.sponsor-logo
  max-height: 70px
  max-width: 240px

.become-a-sponsor
  padding: 60px 0 60px 30px
  border-bottom: 1px solid $navigation-gray-separators
  margin-bottom: 29px

.sponsor-button
  background-color: $become-sponsor-grey
  color: $become-sponsor-text
  border: 1px solid $become-sponsor-border
  border-radius: 6px
  padding: 13px 42px
  box-shadow: 0 1px 1px rgba(114, 98, 154, 0.4)
  font-size: 20px
  overflow: hidden
  white-space: nowrap

footer
  border-top: 1px solid $nav-block-border
  background-color: $dark-purple
  padding-top: 20px
  margin-bottom: 0
  padding: 30px 0
  width: 100%
  min-width: 908px

  #footer-width
    margin: 0 auto
    min-width: 840px
    width: 80%

  .dot-footer
    background: image-url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
    height: 30px
    width: 30px
    display: inline-block

  .footer-copy
    color: $become-sponsor-drop-shadow
    display: inline-block
    margin-left: 20px

    a
      color: $become-sponsor-drop-shadow
      text-decoration: underline

.right-float
  float: right
  margin: 15px

#sessions
  ul.contact-details
    padding: 0
    font-size: 0.8em

    li
      margin-bottom: 5px

#tabs
  margin-left: 20px

  a
    background-color: #F5F5F5
    padding: 5px 10px
    box-shadow: 0 0 1px rgba(177, 166, 204, 0.5) inset

  .active
    border-left: 5px solid
    transition-duration: 0.2s

.message_container
  padding: 90px
  text-align: center
  line-height: 2em
  
  .success
    color: #005000
    border: 1px solid #0f0
    background-color: #D0FFD4
    margin: 0px 20px
    padding: 20px
    border-radius: 5px

  .error
    color: #500000
    border: 1px solid #fc5959
    background-color: #FFBEBE
    margin: 0px 20px
    padding: 20px
    border-radius: 5px

.validation_errors
  font-size: 14px
  border: 1px solid #fc5959
  background-color: #FFBEBE
  margin: 20px 0px
  border-radius: 5px

  ul
    color: #000
    list-style-type: disc


/* star rating */
.rating
  float: left

  ul
    list-style: none
    float: left
    padding: 0
    margin: 0

    li
      float: left
      margin-left: 2px
      background: url("star-rating.gif") no-repeat
      width: 25px
      height: 25px
      cursor: pointer

    li:first-child
      margin-left: 0

    li.hover
      background-position: -25px

    li.active
      background-position: -50px

  span.less
    cursor: pointer
    background: url("star-rating.gif") -75px no-repeat
    display: block
    float: left
    height: 25px
    width: 25px

#sponsoring
  ul
    list-style-type: disc
    color: black

    li
      padding: 5px

  .git-tip
    text-align: center

